# SASS_A-B_Test

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 4cebc83d3603_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  grounding.py  model.py  runner.py  tools.py
backend/app/analytics/: __init__.py  store.py  synthetic.py
backend/app/api/: deps.py
backend/app/assignment/: __init__.py  bucketing.py  cache.py  engine.py  exposure.py  spec.py  targeting.py
backend/app/core/: __init__.py  config.py  db.py  errors.py  logging.py
backend/app/ingestion/: __init__.py  pii.py  service.py  sink.py
backend/app/models/: __init__.py  agent.py  analysis.py  base.py  enums.py  experiment.py  org.py
backend/app/schemas/: __init__.py  admin.py  analysis.py  assign.py  common.py  events.py  experiment.py  layer.py  metric.py
backend/app/services/: __init__.py  analysis.py  api_keys.py  assignment.py  audit.py  experiments.py  layers.py  metrics.py  repository.py
backend/scripts/: __init__.py  demo.py  seed.py
backend/tests/: conftest.py  test_agents.py  test_analysis_api.py  test_analytics.py  test_assign_api.py  test_assignment.py  test_experiments_api.py  test_health.py  test_ingestion.py  test_metrics_layers_api.py  test_migration.py  test_models.py  test_saas.py  test_services.py  test_stats_advanced.py  test_stats_diagnostics.py  test_stats_frequentist.py  test_stats_power.py  test_stats_sequential_segments.py
sdks/python/: README.md  pyproject.toml
(+105 files in other folders)
